<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022-2024 Universitat Politècnica de València
  ~ Authors: David de Andrés and Juan Carlos Ruiz
  ~          Fault-Tolerant Systems
  ~          Instituto ITACA
  ~          Universitat Politècnica de València
  ~
  ~ Distributed under MIT license
  ~ (See accompanying file LICENSE.txt)
  -->
<!--
  ~ Menu to navigate between Fragments.
  ~ Navigation is automatically handled by setting the same Ids
  ~ as the destinations in the navigation graph.
  ~ Each group of elements will be separated by a divider.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- First group of elements -->
    <item
        android:id="@+id/mFirstGroup"
        android:title="@string/first_group_title">
        <menu>
            <item
                android:id="@+id/firstFragment"
                android:checkable="true"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/first_fragment_title" />
            <item
                android:id="@+id/secondFragment"
                android:checkable="true"
                android:icon="@android:drawable/ic_menu_camera"
                android:title="@string/second_fragment_title" />
            <item
                android:id="@+id/thirdFragment"
                android:checkable="true"
                android:icon="@android:drawable/ic_menu_delete"
                android:title="@string/third_fragment_title" />
            <item
                android:id="@+id/fourthFragment"
                android:checkable="true"
                android:icon="@android:drawable/ic_menu_zoom"
                android:title="@string/fourth_fragment_title" />
        </menu>
    </item>
    <!-- Second group of elements -->
    <item
        android:id="@+id/mSecondGroup"
        android:title="@string/second_group_title">
        <menu>
            <item
                android:id="@+id/fifthFragment"
                android:checkable="true"
                android:icon="@android:drawable/ic_menu_call"
                android:title="@string/fifth_fragment_title" />
            <item
                android:id="@+id/sixthFragment"
                android:checkable="true"
                android:icon="@android:drawable/ic_menu_directions"
                android:title="@string/sixth_fragment_title" />
        </menu>
    </item>
</menu>