<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022
  ~ David de Andrés and Juan Carlos Ruiz
  ~ Development of apps for mobile devices
  ~ Universitat Politècnica de València
  -->
<!-- Header for the Navigation drawer -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:fitsSystemWindows="true">

    <!-- Header title -->
    <TextView
        android:id="@+id/tvHeaderTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?attr/colorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/tvHeaderSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivHeader"
        app:layout_constraintTop_toTopOf="@+id/ivHeader"
        app:layout_constraintVertical_chainStyle="spread" />

    <!-- Header subtitle -->
    <TextView
        android:id="@+id/tvHeaderSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/header_subtitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/ivHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivHeader"
        app:layout_constraintTop_toBottomOf="@+id/tvHeaderTitle" />

    <!-- App icon -->
    <ImageView
        android:id="@+id/ivHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        app:tint="?attr/colorSecondary" />
</androidx.constraintlayout.widget.ConstraintLayout>